update type selecor

--- a/index.html
+++ b/index.html
@@ -4,24 +4,51 @@
     <meta charset="UTF-8">
     <title>CSS</title>
 
-    <link rel="stylesheet" href="style.css"> <!-- Plug external CSS -->
-
-    <!-- Internal CSS -->
     <style>
-        h2 {
-            color:green;
-            text-decoration: underline;
+
+        /* -- type selector -- */
+        /*
+        h1 {
+            color: green;
         }
+
+        p {
+            color: red;
+        }
+
+        ol {
+            color: orange;
+        }
+        */
+
+        .red-text {
+            color: red;
+        }
+
+
+
     </style>
 
 </head>
 <body>
 
-    <h1 style="color:red;text-decoration:underline;">Welcome to H1</h1> <!-- Inline CSS -->
+<h1 class="red-text">Hello Selectors</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam architecto aspernatur cumque debitis deleniti dolorem expedita magnam molestiae necessitatibus numquam omnis placeat porro sunt, temporibus tenetur totam, unde veniam.</p>
 
-    <h2>Welcome to H2</h2>
+<ol>
 
-    <h3>Welcome to H3</h3>
+    <h1>I'm List</h1>
+
+    <li>Java</li>
+    <li class="red-text">Python</li>
+    <li>GO</li>
+</ol>
+
+<h1>Hello GDSE</h1>
+
+<h3 class="red-text">
+    I'm H3
+</h3>
 
 </body>
 </html>
