update id selecor

--- a/index.html
+++ b/index.html
@@ -16,21 +16,32 @@
             background: yellow;
         }
 
+        #blue-text {
+            color: dodgerblue;
+        }
+
+        #pink-text {
+            color: pink;
+        }
+
+        #my-text {
+            text-decoration: underline;
+        }
     </style>
 
 </head>
 <body>
 
-<h1 class="red-text my-bg">Hello Selectors</h1>
+<h1 id="my-text" class="red-text my-bg">Hello Selectors</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus aperiam architecto aspernatur cumque debitis deleniti dolorem expedita magnam molestiae necessitatibus numquam omnis placeat porro sunt, temporibus tenetur totam, unde veniam.</p>
 
 <ol>
 
     <h1 class="my-bg">I'm List</h1>
 
-    <li>Java</li>
+    <li id="blue-text">Java</li>
     <li class="red-text">Python</li>
-    <li>GO</li>
+    <li id="pink-text">GO</li>
 </ol>
 
 <h1 class="my-bg">Hello GDSE</h1>
