update universal selecor

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             background: yellow;
         }
 
+        /* -- ID Selector -- */
         #blue-text {
             color: dodgerblue;
         }
@@ -27,6 +28,12 @@
         #my-text {
             text-decoration: underline;
         }
+
+        /* -- Universal Selector -- */
+        * {
+            font-style: italic;
+        }
+
     </style>
 
 </head>
