--- a/index.html
+++ b/index.html
@@ -3,88 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS</title>
-
     <style>
 
-        /*
-            Pseudo-Element Selectors
-        */
-
-        h1::before {
-            content: "😊";
-        }
-
-        h1::after {
-            content: "😂";
-        }
-
-        h3::first-letter {
-            color: dodgerblue;
-        }
-
-        p::first-line {
-            color: deeppink;
-            font-weight: bolder;
-        }
-
-        input::placeholder {
+        section>div>div:first-of-type>p:nth-child(3) {
             color: red;
         }
-
-        input::file-selector-button {
-            background-color: orange;
+        section>div>div:last-of-type>ol>li>ul>li:nth-child(4) {
+            color: orange;
         }
 
-        input::file-selector-button:hover {
-            background-color: green;
-        }
-
-        ::marker {
-            content: "💡";
-        }
-
-        ::selection {
-            background-color: greenyellow;
-            color: white;
-        }
 
     </style>
 
 </head>
 <body>
 
-    <h1>Hello CSS</h1>
+    <section>
 
-    <h3>Welcome To IJSE</h3>
+        <h1>Hiiiiii</h1>
 
+        <div>
 
-    <form>
-        <input type="text" placeholder="Enter your ID">
+            <h3>Hello</h3>
 
-        <br>
-        <br>
+            <div>
+<!--                <h3>Programming</h3>-->
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
 
-        <input type="file">
-    </form>
+            <div>
+                <h3>Tech Stack</h3>
+                <ol>
+                    <li>Java</li>
+                    <li>Python</li>
+                    <li>
+                        JS
+                        <ul>
+                            <li>Topic 01</li>
+                            <li>Topic 02</li>
+                            <li>Topic 03</li>
+                            <li>Topic 04</li>
+                            <li>Topic 05</li>
+                        </ul>
+                    </li>
+                    <li>TS</li>
+                </ol>
+            </div>
 
-    <ul>
-        <li>Java</li>
-        <li>Python</li>
-        <li>GO</li>
-        <li>C</li>
-        <li>C++</li>
-        <li>C#</li>
-    </ul>
+        </div>
 
-    <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci expedita ipsa maiores molestiae nemo sunt suscipit, voluptate. At dignissimos, distinctio, doloremque, fugiat molestias nam nobis placeat quod rerum tempora tempore?
-    </p>
+    </section>
+
+    <main>
+        <div>
+            <div>
+                <h3>Topic</h3>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam architecto blanditiis debitis eum facilis hic ipsa laboriosam minima praesentium quia, quo, ratione recusandae sequi similique suscipit temporibus unde veniam?
+                </p>
+            </div>
+        </div>
+    </main>
+
 </body>
 </html>
