--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>CSS</title>
+
     <style>
 
-        section>div>div:first-of-type>p:nth-child(3) {
+        section p {
             color: red;
         }
-        section>div>div:last-of-type>ol>li>ul>li:nth-child(4) {
-            color: orange;
-        }
-
 
     </style>
 
@@ -20,53 +17,23 @@
 
     <section>
 
-        <h1>Hiiiiii</h1>
-
         <div>
-
-            <h3>Hello</h3>
-
-            <div>
-<!--                <h3>Programming</h3>-->
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-            </div>
-
-            <div>
-                <h3>Tech Stack</h3>
-                <ol>
-                    <li>Java</li>
-                    <li>Python</li>
-                    <li>
-                        JS
-                        <ul>
-                            <li>Topic 01</li>
-                            <li>Topic 02</li>
-                            <li>Topic 03</li>
-                            <li>Topic 04</li>
-                            <li>Topic 05</li>
-                        </ul>
-                    </li>
-                    <li>TS</li>
-                </ol>
-            </div>
-
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consectetur delectus deleniti ducimus eaque error esse, iste iusto minus natus nostrum officiis, praesentium quaerat quibusdam quos sequi similique totam unde!
+            </p>
         </div>
+
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aspernatur blanditiis corporis cumque dolor dolore ducimus ex illo incidunt laboriosam magnam maiores modi placeat quas quibusdam quod saepe tempora, vero!
+        </p>
 
     </section>
 
-    <main>
-        <div>
-            <div>
-                <h3>Topic</h3>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aperiam architecto blanditiis debitis eum facilis hic ipsa laboriosam minima praesentium quia, quo, ratione recusandae sequi similique suscipit temporibus unde veniam?
-                </p>
-            </div>
-        </div>
-    </main>
+    <section>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem beatae blanditiis commodi cupiditate distinctio illum iure magnam ratione, reiciendis suscipit tempore voluptate. Debitis dicta ea eaque laborum mollitia odit.
+        </p>
+    </section>
 
 </body>
 </html>
