--- a/index.html
+++ b/index.html
@@ -6,34 +6,33 @@
 
     <style>
 
-        section p {
-            color: red;
-        }
+      h3+p {
+          color: red;
+      }
+
+      h4+p {
+          color: red;
+      }
 
     </style>
 
 </head>
 <body>
 
-    <section>
+    <h3>Hello 01</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
-        <div>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque consectetur delectus deleniti ducimus eaque error esse, iste iusto minus natus nostrum officiis, praesentium quaerat quibusdam quos sequi similique totam unde!
-            </p>
-        </div>
-
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores aspernatur blanditiis corporis cumque dolor dolore ducimus ex illo incidunt laboriosam magnam maiores modi placeat quas quibusdam quod saepe tempora, vero!
-        </p>
-
-    </section>
-
-    <section>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut autem beatae blanditiis commodi cupiditate distinctio illum iure magnam ratione, reiciendis suscipit tempore voluptate. Debitis dicta ea eaque laborum mollitia odit.
-        </p>
-    </section>
+    <h4>Hello 02</h4>
+    <div>adsadsad</div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
 </body>
 </html>
