--- a/index.html
+++ b/index.html
@@ -2,71 +2,57 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>04 CSS Traversing</title>
+    <title>05 Cascade</title>
 
     <style>
-        ul>li:first-child>ol>li {
-            color: deeppink;
-        }
+            #btn { /* (0, 1, 0, 0) */
+                color: dodgerblue;
+            }
 
-        ul>li:first-child>ol>li:first-child {
-            color: red;
-        }
+            .custom-btn { /* (0, 0, 1, 0) */
+                color: green;
+            }
 
-        ul>li:first-child>ol>li:nth-child(2) {
-            color: orange;
-        }
+            button { /* (0, 0, 0, 1) */
+                color: red;
+            }
 
-        ul>li:nth-child(2)>ol>li:first-child>ol>li:last-child {
-            color: green;
-        }
+            * { /* (0, 0, 0, 0) */
+                color: yellow;
+            }
 
-        ul>li:nth-child(2)>ol>li:first-child>ol>li:nth-child(3)>ul>li:nth-child(2) {
-            color: blue;
-        }
+            /* --------------------------------------------------------- */
+
+            h1 { /* (0, 0, 0, 1) */
+                color: red;
+            }
+
+            .h1class[name] {
+                /*
+                .h1class = (0, 0, 1, 0) [name] = (0, 0, 1, 0)
+                .h1class + [name] = (0, 0, 1, 0) + (0, 0, 1, 0) = (0, 0, 2, 0)
+                */
+                color: deeppink;
+            }
+
+            .h1class { /* (0, 0, 1, 0) */
+                color: orange;
+            }
+
+            [name] { /* (0, 0, 1, 0) */
+                color: mediumpurple;
+            }
 
     </style>
 
 </head>
 <body>
 
-<ul>
-    <li>
-        Java
-        <ol>
-            <li>Java Basics</li>
-            <li>JavaEE</li>
-            <li>Java Spring Boot</li>
-            <li>MySql</li>
-        </ol>
-    </li>
-    <li>
-        UI Technologies
-        <ol>
-            <li>HTML
-                <ol>
-                    <li>Introduction to HTML</li>
-                    <li>HTML Text Formatting</li>
-                    <li>
-                        HTML Multimedia
-                        <ul>
-                            <li>Add Images</li>
-                            <li>Add Videos</li>
-                            <li>Add Audios</li>
-                        </ul>
-                    </li>
-                    <li>HTML Forms</li>
-                    <li>HTML Tables</li>
-                </ol>
-            </li>
-            <li>CSS</li>
-            <li>JS</li>
-        </ol>
-    </li>
-    <li>
-        AWS and ML
-    </li>
-</ul>
+    <button id="btn" class="custom-btn" style="color: orange;">Click!</button> <!-- (1, 0, 0, 0) -->
+
+    <h1 class="h1class" name="hello">Hello!</h1>
+    <h1 class="h1class">Welcome!</h1>
+    <h1 name="hello">Hi!</h1>
 
 </body>
 </html>
