update fixed position

--- a/index.html
+++ b/index.html
@@ -7,55 +7,88 @@
     <link rel="stylesheet" href="assets/normalize.css">
 
     <style>
-        header {
-            background-color: lightblue;
-            position: relative;
+        section {
+            width: 400px;
+            border: 6px solid brown;
+        }
+
+        section>div {
+            background: red;
+            width: 100px;
+            aspect-ratio: 1/1;
+
+            position: sticky;
+            top: 0;
+        }
+
+        #div1 {
+            background: green;
             width: 100vw;
-            height: 60px;
-            padding: 10px;
-        }
+            height: 50px;
 
-        header>img {
-            position: absolute;
-            top: 0;
+            position: fixed;
+        }
+        #div2 {
+            background: url("assets/bird-flying.gif");
+            background-position: center;
+            width: 400px;
+            height: 200px;
+            border: 1px solid blue;
+
+            position: fixed;
             bottom: 0;
-            margin: auto;
-        }
-
-        header>nav {
-            height: fit-content;
-            position: absolute;
             right: 0;
-            top: 0;
-            bottom: 0;
-            margin: auto;
         }
-
-        header>nav>ul {
-            padding: 0;
-            margin: 0;
-        }
-
-        header>nav>ul>li {
-            display: inline-block;
-        }
-
     </style>
 
 </head>
 <body>
 
-    <header>
-        <img src="assets/ijse.png" title="ijse.lk" alt="ijse logo" width="150">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Service</li>
-                <li>Contact</li>
-                <li>About Us</li>
-            </ul>
-        </nav>
-    </header>
+    <div id="div1"></div>
+    <div id="div2"></div>
+
+
+    <section>
+
+        <div></div>
+
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
+    </section>
+
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
+
 
 </body>
 </html>
