--- a/index.html
+++ b/index.html
@@ -2,93 +2,88 @@
 <html lang="en" style="font-size: 20px;">
 <head>
     <meta charset="UTF-8">
-    <title>Assignment 03 - Case 02</title>
+    <title>CSS Transition Ex 01</title>
 
     <link rel="stylesheet" href="assets/normalize.css">
+    <link rel="stylesheet" href="assets/fontawesome/fontawesome-free-6.5.1-web/css/all.min.css">
 
     <style>
-        section {
-            width: 400px;
-            border: 6px solid brown;
-        }
 
         section>div {
-            background: red;
-            width: 100px;
-            aspect-ratio: 1/1;
+            background-color: purple;
+            color: white;
+            width: 250px;
+            height: 60px;
+            margin: 10px 0px;
 
-            position: sticky;
+            position: relative;
+        }
+
+        section>div>h3 {
+            height: fit-content;
+
+            position: absolute;
             top: 0;
-        }
-
-        #div1 {
-            background: green;
-            width: 100vw;
-            height: 50px;
-
-            position: fixed;
-        }
-        #div2 {
-            background: url("assets/bird-flying.gif");
-            background-position: center;
-            width: 400px;
-            height: 200px;
-            border: 1px solid blue;
-
-            position: fixed;
             bottom: 0;
-            right: 0;
+            left: 20px;
+            margin: auto;
+
         }
+
+        section>div>div {
+            height: fit-content;
+
+            position: absolute;
+            right: 20px;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+        }
+
     </style>
 
 </head>
+
 <body>
 
-    <div id="div1"></div>
-    <div id="div2"></div>
+
+<section>
+
+    <div>
+        <h3>Menu 01</h3>
+        <div><i class="fa-solid fa-rocket"></i></div>
+    </div>
+
+    <div>
+        <h3>Menu 02</h3>
+        <div><i class="fa-solid fa-rocket"></i></div>
+    </div>
+
+    <div>
+        <h3>Menu 03</h3>
+        <div><i class="fa-solid fa-rocket"></i></div>
+    </div>
+
+    <div>
+        <h3>Menu 04</h3>
+        <div><i class="fa-solid fa-rocket"></i></div>
+    </div>
+
+    <div>
+        <h3>Menu 05</h3>
+        <div><i class="fa-solid fa-rocket"></i></div>
+    </div>
+
+    <div>
+        <h3>Menu 01</h3>
+        <div><i class="fa-solid fa-rocket"></i></div>
+    </div>
+
+</section>
 
 
-    <section>
-
-        <div></div>
-
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cum, doloribus dolorum esse eum laborum maxime, minus necessitatibus non quia quo soluta voluptate voluptatibus. Beatae in minus reiciendis voluptatibus? Aut.
-    </section>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi in minima, nobis perspiciatis sed voluptas voluptatum. Consectetur ex laboriosam libero placeat, porro qui quia rem temporibus voluptates. Culpa, odit, perferendis?</p>
-
+<script src="assets/fontawesome/fontawesome-free-6.5.1-web/js/all.min.js"></script>
 
 </body>
+
 </html>
